<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightGray_"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgPDF_ico"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pdf_icon2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="5"
            android:contentDescription="@string/PDF"/>
        <LinearLayout
            android:id="@+id/contactInfoLLContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPIB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:text="@string/testName"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:text="@string/pos_ms_nazva"/>
                <TextView
                    android:id="@+id/tvMisceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/testName"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="bottom|end">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>
                <ImageView
                    android:id="@+id/addToLikeContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="5"
                    android:tag="@string/like"
                    android:src="@drawable/star_outline_contact"/>
                <ImageView
                    android:id="@+id/openPDF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="5"
                    android:tag="@string/comment"
                    android:src="@drawable/icon_pdf"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>