<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightGray_"
    android:layout_marginTop="4dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgPDF_ico_like"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pdf_icon2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="5"
            android:contentDescription="@string/PDF"/>
        <LinearLayout
            android:id="@+id/contactInfoLLContainer_like"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPIB_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:text="@string/testName"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:text="@string/pos_ms_nazva"/>
                <TextView
                    android:id="@+id/tvMisceName_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/testName"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="bottom|end">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>
                <ImageView
                    android:id="@+id/dell_from_LikeContact_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="5"
                    android:tag="@string/like_1"
                    android:src="@drawable/star_contact"/>
                <ImageView
                    android:id="@+id/openPDF_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="5"
                    android:src="@drawable/icon_pdf"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_comment_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textStyle="bold"
                android:text="@string/comment"/>
            <TextView
                android:id="@+id/tv_comment_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/colorPrimary"
                android:text="@string/test_comment"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="8"
                android:gravity="end|bottom">
                <ImageView
                    android:id="@+id/img_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_pencil"
                    android:contentDescription="@string/comment"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>